feat: Stonecutter